<resources>
    <string name="app_name">GlobusNilOmar</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="prompt_username" translatable="false">Username</string>
    <string name="prompt_date" translatable="false">Actual Date</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="welcome" translatable="false">"Welcome !"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="BTMLOGIN">Login</string>
    <string name="BTMREGISTRO">Register</string>
    <string name="BTMELIMINAR">Delete</string>
    <string name="restart">Restart</string>
    <string name="BTMEDITAR">Edit Image</string>
    <string name="puntuacio" translatable="false">0</string>
    <string name="uid" translatable="false">0</string>
    <string name="correo" translatable="false">john@sample.com</string>
    <string name="nom" translatable="false">John</string>
    <string name="MenuTxt">MENU</string>
    <string name="jugarBtn">Play</string>
    <string name="PuntuacionsBtn">Scores</string>
    <string name="CreditsBtn">Credits</string>
    <string name="TancarSessio">Log Out</string>
    <string name="miPuntuaciotxt">Score</string>
    <string name="edatEt">Age</string>
    <string name="poblacioEt">Location</string>
    <string name="edat" translatable="false">0</string>
    <string name="poblacio" translatable="false">Manresa</string>
    <string name="editarBtn">Change image</string>
    <string name="fecha">Date</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="CANVICONTRASENYA">Change password</string>
    <string name="GameOver">You Lost</string>
    <string name="P1Wins">Player 1 Wins!</string>
    <string name="YouWon">You Won!</string>
    <string name="P2Wins">Player 2 Wins!</string>
    <string name="CPUWins">CPU Wins!</string>
    <string name="Tie">Tie</string>
    <string name="Welcome">Welcome</string>
    <string name="ErrorSendingEmail">Error sending the email to reset the password.</string>
    <string name="ErrorSendingImage">Error uploading image:</string>
    <string name="ImageUpdated">Image updated correctly</string>
    <string name="ErrorImageUpdate">Error updating the image:</string>
    <string name="LogSuccess">Player logged in</string>
    <string name="AuthFail">Authentication failed.</string>
    <string name="RegisterSucces">User registered successfully.</string>
    <string name="RegisterFail">Failed to register user:</string>

</resources>