<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d2edf4"
    tools:context=".LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- ENTREM EL MAIL -->
            <EditText
                android:id="@+id/correoEt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/prompt_email" />
            <!-- forcem que la entrada sigui un correu electronic -->
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <!-- ENTREM EL PASSWORD -->
            <EditText
                android:id="@+id/passEt2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"
                android:hint="@string/prompt_password" />
            <!-- forcem que la entrada sigui un password -->
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <!-- BOTO DE Login -->
            <Button
                android:id="@+id/BtnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_login"
                android:text="@string/BTMLOGIN"
                android:textColor="@color/bluesoft" />
            <!--<Button
                android:id="@+id/BtnCanviContrasenya"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_menu"
                android:text="@string/CANVICONTRASENYA"
                android:textColor="@color/blueberry"
                />-->
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</RelativeLayout>