<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluesoft"
    android:padding="16dp"
    android:paddingStart="13dp"
    tools:context=".PlayerDetails">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="@color/blueberry"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Marco blanco alrededor de la imagen -->
            <androidx.cardview.widget.CardView
                android:id="@+id/imageFrame"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="30dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="90dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints">

                <androidx.cardview.widget.CardView
                    android:id="@+id/imageFrame2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="90dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints">

                    <ImageView
                        android:id="@+id/imatgeD"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        tools:src="@drawable/fperfil" />
                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/nomD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:textColor="#FFFFFF"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/imageFrame"
                app:layout_constraintStart_toEndOf="@id/imageFrame"
                app:layout_constraintTop_toTopOf="@id/imageFrame"
                tools:text="Nombre" />

            <TextView
                android:id="@+id/puntuacioLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/miPuntuaciotxt"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageFrame" />

            <TextView
                android:id="@+id/puntuacioD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/puntuacioLabel"
                app:layout_constraintTop_toTopOf="@+id/puntuacioLabel"
                tools:text="0" />

            <TextView
                android:id="@+id/dataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/puntuacioD" />

            <TextView
                android:id="@+id/dataD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/dataLabel"
                app:layout_constraintTop_toTopOf="@+id/dataLabel"
                tools:text="Apr 5, 2024" />

            <TextView
                android:id="@+id/edatLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edatEt"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/dataD"
                tools:text="Age" />

            <TextView
                android:id="@+id/edatD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/edatLabel"
                app:layout_constraintTop_toTopOf="@+id/edatLabel"
                tools:text="0" />

            <TextView
                android:id="@+id/emailLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_email"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edatD"
                tools:text="@string/prompt_email" />

            <TextView
                android:id="@+id/emailD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/emailLabel"
                app:layout_constraintTop_toTopOf="@+id/emailLabel"
                tools:text="correo@example.com" />

            <TextView
                android:id="@+id/poblacioLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/poblacioEt"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailD"
                tools:text="Población:" />

            <TextView
                android:id="@+id/poblacioD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@+id/poblacioLabel"
                app:layout_constraintTop_toTopOf="@+id/poblacioLabel"
                tools:text="Ciudad" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>

